# Quant

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  README.md  benchmark_baseline.json  pyproject.toml  requirements.txt  sbom.json  task.md
agentic/: __init__.py
agentic/tools/: risk.py
agentic/tools/data/: __init__.py  tools.py
agentic/tools/simulation/: __init__.py  tools.py
app/: __init__.py  main.py
app/contracts/: GOVERNANCE.md  __init__.py  analytics.py  audit.py  base.py  indicators.py  live.py  market.py  optimization.py  portfolio.py  providers.py  risk.py  simulation.py  strategies.py  trading.py
app/core/: __init__.py  config.py  dependencies.py  security.py
app/models/: __init__.py
app/routes/: __init__.py  brokers.py
app/services/: __init__.py
app/services/analytics/: README.md  __init__.py  adapters.py  benchmark.py  dashboard.py  distributions.py  drawdown.py  efficiency.py  equity.py  models.py  ratios.py  report.py  risk.py  scorecard.py  trade.py
app/services/brokers/: __init__.py  binance.py  ctrader.py  dukascopy.py  mt5.py  router.py  yahoo.py
app/services/data/: README.md  __init__.py  gateway.py  models.py  scheduler.py  storage.py  transforms.py  validation.py
app/services/indicators/: README.md  __init__.py  calculations.py  errors.py  protocols.py  py.typed  registry.py
app/services/indicators/adapters/: __init__.py  audit.py  cache.py  canary.py  observability.py  tracing.py
app/services/indicators/batch/: __init__.py  momentum.py  trend.py  volatility.py
app/services/indicators/incremental/: __init__.py  accumulators.py  state.py
app/services/live/: README.md  __init__.py  executor.py  gates.py  monitoring.py  reconciliation.py  session.py
app/services/optimization/: README.md  __init__.py  helpers.py  models.py  robustness.py  scoring.py  splitting.py  sweeps.py
app/services/optimization/algorithms/: __init__.py  bayesian.py  genetic.py  grid.py  random.py
app/services/optimization/persistence/: __init__.py  checkpoint.py  repository.py
app/services/research/: README.md  __init__.py  data.py  features.py  helpers.py  leakage.py  metrics.py  reporting.py
app/services/research/studies/: __init__.py  eds.py  null_models.py  structure.py  unsupervised.py
app/services/risk/: README.md  __init__.py  allocation.py  audit.py  config.py  correlation.py  drawdown.py  execution_gate.py  exposure.py  governor.py  kill_switch.py  lifecycle.py  limits.py  margin.py  models.py  policy.py  regime.py  reports.py  scenarios.py  sizing.py  storage.py  stress.py  tools.py  var_es.py
app/services/risk/configs/: default.json  default.yaml  live_conservative.json  live_conservative.yaml  paper.json  paper.yaml  prop_firm_default.json  prop_firm_default.yaml
app/services/simulation/: __init__.py  engine.py  journal.py  orchestrator.py  report.py  trader.py
app/services/simulation/models/: __init__.py  fee.py  liquidity.py  margin.py  slippage.py  spread.py  swap.py  tick.py
app/services/simulation/validation/: __init__.py  quality.py  schema.py
app/services/simulator/: README.md  __init__.py  analytics.py  data_feed.py  engine.py  journal.py  models.py  orchestrator.py  report.py  trader.py
app/services/simulator/models/: __init__.py  fee.py  liquidity.py  margin.py  slippage.py  spread.py  swap.py  tick.py
app/services/simulator/validation/: __init__.py  quality.py  schema.py
app/services/strategies/: README.md  __init__.py  base.py  event.py  protocols.py  registry.py  sandbox.py  vectorized.py
app/services/strategies/source/: __init__.py  random_walk.py  trend_following.py
app/services/trader/: README.md  __init__.py  account_info.py  concurrency.py  deal_info.py  history_order_info.py  idempotency.py  order_info.py  position_info.py  rate_limiter.py  readiness.py  reconciliation.py  reporting.py  resolver.py  result.py  store.py  symbol_info.py  terminal_info.py  trade.py  validation.py
app/utils/: README.md  __init__.py  auth.py  data_quality.py  dataframe_tools.py  error_routing.py  errors.py  event_bus.py  identity.py  logger.py  normalization.py  notifications.py  observability.py  paths.py  schema_validation.py  security.py  settings.py  standard.py  validations.py
docs/: ARCHITECTURE.md  Agentic_AI_Playbook.md  CICD_RELEASE_PROCESS.md  Implementation_Plan.md  PROJECT.md  ROADMAP.md  Tool_Function_Auditing_Checklist.md  Tools_Functions_Standard.md
docs/adr/: ADR-ANALYTICS-LIMITS.md  ADR-ANALYTICS-PUBLIC-SURFACE.md
docs/phase-implementation-plan/: 00-project-scaffold-and-ci-foundation.md  01-utils-foundation.md  01_5-core-domain-contracts.md  02-data-foundation.md  03-indicator-library.md  04-strategy-service.md  05-risk-governance.md  06-analytics-service.md  07-trading-service.md  08-simulation-engine.md  08-simulator-engine.md  09-optimization-service.md  10-live-runtime.md  11-ui-and-api-gateway.md  12-research-edge-lab.md  13-conversation-ai-layer.md
docs/source-requirements/: 01-utils.md  02-data.md  03-indicator.md  04-strategy.md  05-risk.md  06_analytics.md  07_trading.md  08-simulation.md  09_optimization.md  10_live.md  11_ui_api.md  12_research.md  13_conversation.md  Implementation_Plan.md
docs/standards/: Agent_Standard.md  Agentic_AI_Playbook.md  Tools_Functions_Standard.md  code_quality.md
scripts/: generate_sbom.py  run_benchmarks.py
src/app/: main.py
tests/: test_main.py
tests/stress/: __init__.py
tests/stress/app/: __init__.py
tests/stress/app/utils/: __init__.py  paths_concurrency_stress.py
tests/stress/tools/: __init__.py
tests/unit/app/: __init__.py
tests/unit/tools/: test_data_tools.py
tests/usage/: 01_5_core_contracts.py  __init__.py
tests/usage/app/: __init__.py  utils.py
tests/usage/tools/: __init__.py  utils.py
tools/: __init__.py
tools/utils/: __init__.py  auth.py  data_quality.py  dataframe_tools.py  error_routing.py  errors.py  event_bus.py  identity.py  logger.py  normalization.py  notifications.py  observability.py  paths.py  schema_validation.py  security.py  settings.py  standard.py
(+140 files in other folders)
